# hst-server/swagger/swagger.json
@@ -1270,7 +1270,7 @@
                         "required": true
                     },
                     {
-                        "description": "path required; omitted override fields inherit",
+                        "description": "path, symbol, or base_symbol_id; omitted override fields inherit",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -3269,10 +3269,10 @@
         },
         "internal_server_v1.CrtGroupSymbol": {
             "type": "object",
-            "required": [
-                "path"
-            ],
             "properties": {
+                "base_symbol_id": {
+                    "type": "integer"
+                },
                 "config_index": {
                     "type": "integer"
                 },
@@ -3321,6 +3321,9 @@
                 "margin_initial": {
                     "type": "number"
                 },
+                "margin_initial_buy": {
+                    "type": "number"
+                },
                 "margin_initial_buy_limit": {
                     "type": "number"
                 },
@@ -3328,6 +3331,9 @@
                     "type": "number"
                 },
                 "margin_initial_buy_stop_limit": {
+                    "type": "number"
+                },
+                "margin_initial_sell": {
                     "type": "number"
                 },
                 "margin_initial_sell_limit": {
@@ -3432,6 +3438,10 @@
                 },
                 "swap_year_day": {
                     "type": "integer"
+                },
+                "symbol": {
+                    "type": "string",
+                    "maxLength": 64
                 },
                 "trade_mode": {
                     "$ref": "#/definitions/model.TradeMode"
@@ -4253,6 +4263,9 @@
                 "margin_initial": {
                     "type": "number"
                 },
+                "margin_initial_buy": {
+                    "type": "number"
+                },
                 "margin_initial_buy_limit": {
                     "type": "number"
                 },
@@ -4260,6 +4273,9 @@
                     "type": "number"
                 },
                 "margin_initial_buy_stop_limit": {
+                    "type": "number"
+                },
+                "margin_initial_sell": {
                     "type": "number"
                 },
                 "margin_initial_sell_limit": {
@@ -5196,6 +5212,9 @@
                 "margin_initial": {
                     "type": "number"
                 },
+                "margin_initial_buy": {
+                    "type": "number"
+                },
                 "margin_initial_buy_limit": {
                     "type": "number"
                 },
@@ -5203,6 +5222,9 @@
                     "type": "number"
                 },
                 "margin_initial_buy_stop_limit": {
+                    "type": "number"
+                },
+                "margin_initial_sell": {
                     "type": "number"
                 },
                 "margin_initial_sell_limit": {
